# diagnostics-bold_but_better

./: .gitignore  README.md  analysis_plan.md  outlier_detction_methods.md  pyproject.toml  requirements.txt
.github/workflows/: testing.yml
findoutlie/: __init__.py  detect_outliers.py  detectors.py  metrics.py  outfind.py
findoutlie/tests/: test_detectors.py  test_dvars.py  test_outfind.py
scripts/: find_outliers.py  validate_data.py
